# vocab2anki

./: CHANGELOG.md  README.md  pyproject.toml
tests/: test_vocab2anki.py
vocab2anki/: vocab2anki.py
