[tool.poetry]
name = "vocab2anki"
version = "0.0.1"
description = ""
authors = ["Michał Pindel <m.pindel7991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
